# Rolly303

./: .gitignore  CMakeLists.txt  README.md  run-linux.sh  run-win.bat  uninstall-win.bat
.github/workflows/: build.yml
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TB303Engine.h
tests/: engine_tests.cpp  sequencer_tests.cpp
